COMMERCE-4710 fixed alignments on data set display filter resume

--- a/modules/apps/frontend-taglib/frontend-taglib-clay/src/main/resources/META-INF/resources/data_set_display/_data_set_display.scss
+++ b/modules/apps/frontend-taglib/frontend-taglib-clay/src/main/resources/META-INF/resources/data_set_display/_data_set_display.scss
@@ -239,7 +239,7 @@
 		opacity: 0.5;
 	}
 
-	&.filter-resume-content {
+	.filter-resume-content {
 		display: flex;
 	}
 }
